[gd_scene load_steps=4 format=3 uid="uid://dfplwgom7csdv"]

[ext_resource type="Script" path="res://Scripts/Person_script.gd" id="1_x4d23"]
[ext_resource type="Texture2D" uid="uid://b40165yoow0br" path="res://Sprites/Ui/button_rectangle_depth_flat.svg" id="2_i1pae"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_88ck2"]
size = Vector2(320.307, 331.26)

[node name="Person" type="Area2D"]
position = Vector2(-48, -30)
script = ExtResource("1_x4d23")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(47.6144, 28.5192)
shape = SubResource("RectangleShape2D_88ck2")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(47.5, 33)
scale = Vector2(1.61979, 5.21875)
texture = ExtResource("2_i1pae")

[node name="HintLabel" type="Label" parent="."]
offset_left = -102.0
offset_top = -213.0
offset_right = -62.0
offset_bottom = -190.0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
